--- a/MainServer/src/main/resources/templates/index.html
+++ b/MainServer/src/main/resources/templates/index.html
@@ -69,6 +69,10 @@
         <form th:action="@{/refreshHistory}" method="post">
             <button type="submit" class="btn btn-primary">Оновити</button>
         </form>
+        <br>
+        <form th:action="@{/cancelCalculate}" method="post">
+            <button type="submit" class="btn btn-danger">Х</button>
+        </form>
     <thead class="table-dark">
         <tr>
             <th>Число</th>
@@ -83,6 +87,7 @@
             <td th:text="${operation.result}"></td>
             <td th:text="${operation.time}"></td>
             <td th:text="${operation.port}"></td>
+
 <!--            <td th:text="${#dates.format(operation.time, 'dd.MM.yyyy HH:mm:ss')}"></td> &lt;!&ndash; Відображаємо час у зручному форматі &ndash;&gt;-->
         </tr>
         </tbody>
