--- a/MainServer/src/main/resources/templates/users.html
+++ b/MainServer/src/main/resources/templates/users.html
@@ -28,6 +28,23 @@
 </nav>
 <div class="container">
     <div class="row col-md-10">
+        <h2>Applications Server Status</h2>
+    </div>
+    <table class="table table-bordered table-hover">
+        <thead class="table-dark">
+        <tr>
+            <th>Port</th>
+            <th>Active threets</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each = "port : ${ports}">
+            <td th:text = "${port.port}"></td>
+            <td th:text = "${port.info}"></td>
+        </tr>
+        </tbody>
+    </table>
+    <div class="row col-md-10">
         <h2>List of Registered Users</h2>
     </div>
     <table class="table table-bordered table-hover">
@@ -47,5 +64,10 @@
         </tbody>
     </table>
 </div>
+<script>
+    setInterval(function() {
+        location.reload(); // Оновлення сторінки
+    }, 2000); // 3000 мілісекунд = 3 секунди
+</script>
 </body>
 </html>
